# plato-platform

./: LICENSE  README.md  pyproject.toml
plato_platform/: main.py
plato_platform/agents/: agent_config.py  agents.py
plato_platform/modules/: llm.py
plato_platform/utils/: cli.py
tests/: test_cli.py
